--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@eslint/js": "^9.11.1",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@typescript-eslint/parser": "^8.6.0",
+    "eslint-plugin-react": "^7.37.2",
     "typescript-eslint": "^8.6.0"
   },
   "peerDependencies": {
