--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "@fullhaus/eslint-config",
   "version": "0.1.1",
   "description": "Default ESLint configuration for FULLHAUS projects.",
-  "main": "index.mjs",
+  "main": "index.js",
   "author": "FULLHAUS GmbH <development@fullhaus.de>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "lint": "eslint",
     "version": "pnpm run test",
