--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@stylistic/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-unicorn": "^59.0.1",
     "typescript-eslint": "^8.35.1"
   },
   "devDependencies": {
