fix: correct file name inside test script

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "lint": "eslint",
     "version": "pnpm run test",
-    "test": "pnpm lint && node index.mjs && node legacy"
+    "test": "pnpm lint && node index.js"
   },
   "files": [
     "configs",
