chore: update version to v0.2.2 and add provenance flag to npm publish
chore: move provenance flag to environment variable for pnpm publish

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,3 +36,5 @@ jobs:
 
       - name: Publish to npm
         run: pnpm publish --no-git-checks --access public
+        env:
+          NPM_CONFIG_PROVENANCE: true
