--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,13 +18,10 @@ jobs:
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 10.15.1
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
           registry-url: "https://registry.npmjs.org"
           cache: "pnpm"
 
@@ -36,3 +33,6 @@ jobs:
 
       - name: Publish to npm
         run: pnpm publish --no-git-checks --access public
+        env:
+          NPM_CONFIG_PROVENANCE: true
+          NODE_AUTH_TOKEN: ${{ secrets.FH_NPM_TOKEN }}
