--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@eslint/js": "^9.39.1",
     "@stylistic/eslint-plugin": "^5.6.1",
     "@typescript-eslint/parser": "^8.49.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-unicorn": "^62.0.0",
     "typescript-eslint": "^8.49.0"
